Metatag 8.x-1.7, 2018-08-31
---------------------------
#2994979 by DamienMcKenna, dspachos, ynotpeanutbutter, oxy86, IT-Cru, kdeds,
  zenimagine: Fixed backwards compatibility break when support for multiple-
  value tags was added.
#2990923 by th_tushar, DamienMcKenna: Fixed  coding standards.


Metatag 8.x-1.6, 2018-08-21
---------------------------
#2961777 by thejimbirch, Baysaa: "Geographical position" (geo.position) should
  use semi-colon instead of comma.
#2964626 by idebr: og:image:secure_url allows for multiple values.
#2865267 by DamienMcKenna, okonvicka, aldibier: <title> tags empty after
  installing Metatag.
#2962426 by dragonwize: Image URL double encoded.
#2973277 by mvantuch, DamienMcKenna: Support for og:image:alt.
#2977002 by DamienMcKenna, maxoid: Enable testing on the two og product meta
  tags.
#2977545 by pmelab, bappa.sarkar, DamienMcKenna: GraphQL throws an error due to
  Metatag's use of a custom data structure.
#2925714 by acbramley, vakulrai, Berdir, nkoporec: Replace deprecated
  BaseFieldDefinition ::setQueryable.
#2957411 by pmelab: Field item empty check on empty arrays.
#2958743 by DamienMcKenna, AdamEvertsson, StepanISK, trong.nguyen.tcec,
  chiefme, quixxel, rjg, CProfessionals: Ignore update.php requests when
  loading entities; error message when updating from 8.x-1.0 to 8.x-1.5.
#2961918 by thejimbirch, Michelle: Add the site.webmanifest meta tag.
#2895577 by plopesc, drupallogic: Error loading
  /admin/config/search/metatag?page=1.
#2943954 by thejimbirch, DamienMcKenna: Document an approach to simplify
  overriding meta tags on a per-entity basis.
#2968902 by DamienMcKenna, Berdir: Default user page title token should use
  [user:display-name].
#2977197 by justin., DamienMcKenna: Allow modules to override the entity used
  for token replacements.
#2691313 by KarenS, carstenG, DamienMcKenna, Michelle, marysmech: New option to
  control which meta tag groups are used on each form.