@@ -6,8 +6,8 @@ package: SEO
 dependencies:
   - metatag:metatag
 
-# Information added by Drupal.org packaging script on 2018-08-31
-version: '8.x-1.7'
+# Information added by Drupal.org packaging script on 2019-02-20
+version: '8.x-1.8'
 core: '8.x'
 project: 'metatag'
-datestamp: 1535726412
+datestamp: 1550683387
